# PyFMReader

./: pyproject.toml
src/pyfmreader/jpk/: parsejpkheader.py
