[project]
name = "pyfmreader"
version = "0.1.3"
description = "Python reader for JPK AFM files"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.8"
authors = [
    {name = "Javier Lopez Alonso"},
]
dependencies = [
    "numpy",
    "pandas",
    "tifffile",
]

[project.urls]
"Bug Tracker" = "https://github.com/jlopezalo/PyFMReader/issues"
"repository" = "https://github.com/jlopezalo/PyFMReader"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
namespaces = true
where = ["src"]
